src/test/ui/error-codes/E0528.stderr
error[E0528]: pattern requires at least 3 elements but array has 2
  --> $DIR/E0528.rs:16:10
   |
16 |         &[a, b, c, rest..] => {
   |          ^^^^^^^^^^^^^^^^^ pattern cannot match array of 2 elements

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0528"
